<resources>
    <string name="app_name">Test2</string>
    <string name="hello_world">hello world</string>
    <string name="roll">Roll</string>
    <string name="aleks">Aleks Haecky</string>
    <string name="yellow_star">yellow_star</string>

    <string name="bio">Hi, my name is Aleks.
                        \n\nI love fish.
                        \n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
                        \nFun fact is that I have several aquariums and also a river.
                        \n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
                        \nAnd sometimes I even go fishing.
                        \nAnd even less sometimes, I actually catch something.
                        \n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
                        \n\nI\'ll be happy to teach you how to make your own aquarium.
                        \nYou should ask someone else about fishing, though.\n\n</string>
    <string name="ed_hint">What is your nickName</string>
    <string name="name">Name</string>
    <string name="done">Done</string>

    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and buttons.</string>

    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play">Play</string>
    <string name="todo">TODO</string>
</resources>